# explicit-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  REVIEW.md  devenv.generated.nix  devenv.nix  eol_db.toml  explicit.generated.deps.nix  flake.nix  registry.toml
.codex/: hooks.json
.github/workflows/: ci.yml
.nono/: analysis.json  guard-commands.json  stop-guard.sh
.nono/runtime/: shell-env.json  shell-plan.json
docs/: observability.md  postgres-query-analysis.md
scratch/reqwest-probe/: Cargo.toml
scratch/reqwest-probe/src/: main.rs
src/: analysis.rs  codex_mcp.rs  consult.rs  devenv_file.rs  env_trace.rs  env_trace_lib.rs  eol.rs  github_app.rs  hooks.rs  host_tools.rs  main.rs  observe.rs  parallel.rs  registry.rs  runtime.rs  sandbox.rs  verify.rs
src/heuristics/: elixir.rs  javascript.rs  php.rs  python.rs  ruby.rs
tests/: apply.rs
