[package]
name = "explicit"
version = "0.1.0"
edition = "2024"

[lib]
name = "explicit_env_trace"
path = "src/env_trace_lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
libc = "0.2.177"
nono = "0.31.0"
onefetch = "2.27.1"
onefetch-manifest = "2.27.1"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rnix = "0.14.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
toml = "0.9.8"

[dev-dependencies]
tempfile = "3.23.0"
